# NTE_Gacha_Exporter

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
apps/cli/: Cargo.toml
apps/cli/tests/: cli.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: admin.rs  agent_smoke.rs  assets_commands.rs  capture.rs  diagnostic.rs  error.rs  lib.rs  lifecycle.rs  main.rs  state.rs  store_commands.rs  system_commands.rs  update_commands.rs  update_service.rs  windivert_commands.rs  window_commands.rs
apps/desktop/src-tauri/src/assets_commands/: commands.rs  fetch.rs  install.rs  io.rs  paths.rs  status.rs  types.rs
apps/desktop/src-tauri/src/capture/: auto_page.rs  commands.rs  progress.rs  session.rs  status.rs  support.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/capture/tests/: auto_page.rs  backend.rs  common.rs  finish.rs  paths.rs  sessions.rs  support.rs
apps/desktop/src-tauri/src/diagnostic/: artifacts.rs  classification.rs  commands.rs  internal_capture.rs  pktmon.rs  session.rs  status.rs  target.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/update_service/: download.rs  github.rs  tests.rs  types.rs
crates/nte-assets/: Cargo.toml
crates/nte-assets/resources/: NTE_ASSETS_COMMIT
crates/nte-assets/resources/maps/: de.json  en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh-CN.json  zh-Hans.json  zh-Hant.json
crates/nte-assets/src/: lib.rs  map_build.rs  pack_build.rs
crates/nte-assets/src/map_build/: banners.rs  entry.rs  item_meta.rs  item_names.rs  item_refs.rs  items.rs  labels.rs  limited_monopoly.rs  pools.rs  rules.rs  tables.rs  tests.rs  types.rs  validation.rs
crates/nte-assets/src/pack_build/: build.rs  encode.rs  manifest.rs  refs.rs  tests.rs
crates/nte-automation/: Cargo.toml
crates/nte-automation/assets/: default.json
crates/nte-automation/src/: error.rs  home.rs  lib.rs  model.rs  ocr.rs  pager.rs  profile.rs  screenshot.rs  tooltip.rs  window.rs
crates/nte-automation/src/matcher/: mod.rs  scale.rs
crates/nte-automation/src/ocr/: diagnostics.rs  reader.rs  scoring.rs  target.rs  templates.rs  tests.rs  types.rs
crates/nte-automation/src/pager/: pages.rs  status.rs  tests.rs  types.rs  workflow.rs
crates/nte-automation/src/pager/pages/: context.rs  diagnostics.rs  navigation.rs  run.rs
crates/nte-capture/: Cargo.toml
crates/nte-capture/src/: capture_document.rs  capture_live.rs  capture_net.rs  capture_protocol.rs  capture_raw.rs  diagnostic.rs  document.rs  lib.rs  live.rs  net.rs  protocol.rs  raw.rs  windivert.rs
crates/nte-capture/src/diagnostic/: dedup.rs  drop_analysis.rs  dropped_samples.rs  run.rs  summary.rs
crates/nte-capture/src/diagnostic/drop_analysis/: analyzer.rs  format.rs  tests.rs
crates/nte-capture/src/live/: engine.rs  pktmon.rs  progress.rs  raw_filter.rs  types.rs  windivert_backend.rs
crates/nte-capture/src/protocol/: assembler.rs  blocks.rs  envelope.rs  merge.rs  tests.rs  types.rs
crates/nte-capture/src/raw/: network.rs  reader.rs  tests.rs  types.rs  writer.rs
crates/nte-capture/src/windivert/: error.rs  ffi.rs  install.rs  tests.rs
crates/nte-core/: Cargo.toml
crates/nte-core/src/: analysis.rs  derived.rs  export.rs  i18n.rs  identity.rs  lib.rs  maps.rs  model.rs  order.rs  public_json.rs  rules.rs
crates/nte-core/src/analysis/: overview.rs  rankings.rs  records.rs  summary_stats.rs
crates/nte-core/src/derived/: tests.rs
crates/nte-core/src/maps/: loading.rs  map_data.rs  resolve.rs  tests.rs  types.rs
crates/nte-core/src/model/: common.rs  records.rs  stats.rs
crates/nte-core/src/rules/: derived.rs  resolution.rs  tests.rs
crates/nte-store/: Cargo.toml
crates/nte-store/src/: lib.rs  store.rs  store_tests.rs
crates/nte-store/src/store/: backup_create.rs  backup_read.rs  disk.rs  merge.rs  profiles.rs  queries.rs  types.rs  util.rs
crates/nte-store/src/store_tests/: dashboard_stats.rs  export_backup.rs  helpers.rs  profiles_import.rs  records_filters.rs  restore_update.rs
crates/nte-store/src/store_tests/dashboard_stats/: overview.rs  ranking_distribution.rs  selection.rs  wall_missing_data.rs
crates/nte-store/src/store_tests/profiles_import/: imports.rs  legacy.rs  profiles.rs  public_json.rs  settings.rs
crates/nte-store/src/store_tests/records_filters/: basic.rs  fork.rs  options_paging.rs
crates/nte-update/: Cargo.toml
crates/nte-update/src/: lib.rs  updater.rs  updater_tests.rs
crates/nte-update/src/updater/: api.rs  archive.rs  filesystem.rs  manifest.rs  payload.rs
desktop/: Cargo.toml  index.html  package.json
desktop/crates/nte_automation/: Cargo.toml
desktop/crates/nte_automation/src/: lib.rs  model.rs  ocr.rs  pager.rs  window.rs
desktop/crates/nte_automation/src/matcher/: mod.rs  ncc.rs  scale.rs
desktop/crates/nte_gui_core/: Cargo.toml
desktop/crates/nte_gui_core/src/: analysis.rs  capture_document.rs  capture_live.rs  capture_protocol.rs  capture_raw.rs  db.rs  db_tests.rs  derived.rs  export.rs  lib.rs  maps.rs  model.rs  public_json.rs  rules.rs  store.rs  store_tests.rs  updater.rs  updater_tests.rs
desktop/crates/nte_portable_tools/: Cargo.toml
desktop/crates/nte_portable_tools/tests/: cli.rs
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.en.md
fixtures/: sample.raw.jsonl
packaging/: build-win-release.ps1
tests/: test_automation.py  test_banner_catalog.py  test_capture_live.py  test_cli.py  test_decode.py  test_export.py  test_maps.py  test_nuitka_packaging.py  test_output_defaults.py  test_resources.py  test_sidecar.py  test_tui.py
tools/agent-smoke/: Cargo.toml  README.md  build-agent-app.ps1  build-smoke-portable.ps1
tools/agent-smoke/src/: api.rs  cli.rs  main.rs  report.rs  runtime.rs  smoke.rs  util.rs  window.rs
tools/agent-smoke/src/smoke/: dashboard.rs  data.rs  navigation.rs  reporting.rs
(+186 files in other folders)
