[package]
name = "nte-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nte-core = { path = "../nte-core" }
regex.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
