[package]
name = "nte-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = { workspace = true, default-features = false, features = ["alloc"] }
nte-core = { path = "../nte-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
pktmon.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_Rras",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
] }
