[package]
name = "nte-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
atomic-write-file.workspace = true
nte-core = { path = "../nte-core" }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
unicode-casefold.workspace = true
unicode-normalization.workspace = true
zip = { workspace = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
nte-capture = { path = "../nte-capture" }
tempfile.workspace = true
