[package]
name = "nte-update"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
semver.workspace = true
sha2.workspace = true
serde_json.workspace = true
nte-core = { path = "../nte-core" }
zip = { workspace = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile.workspace = true
