[package]
name = "nte-gacha-exporter-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "nte_gacha_exporter_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nte-gacha-exporter-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[features]
default = []
agent-smoke = ["tauri/devtools"]

[dependencies]
nte-automation = { path = "../../../crates/nte-automation" }
nte-capture = { path = "../../../crates/nte-capture" }
nte-core = { path = "../../../crates/nte-core" }
nte-store = { path = "../../../crates/nte-store" }
nte-update = { path = "../../../crates/nte-update" }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
ureq.workspace = true
windows-sys = { workspace = true, features = ["Win32_Globalization"] }
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
