[package]
name = "nte_gui_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

