[package]
name = "nte_gui_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atomic-write-file = "0.3"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
