[package]
name = "nte_gui_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
atomic-write-file = "0.3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
hex = "0.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
pktmon = "0.6.2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3"
