[package]
name = "nte_portable_tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nte-gacha"
path = "src/bin/nte-gacha.rs"

[[bin]]
name = "nte-gacha-updater"
path = "src/bin/nte-gacha-updater.rs"

[[bin]]
name = "nte-gacha-cli"
path = "src/bin/nte-gacha-cli.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
crossterm = "0.28"
nte_automation = { path = "../nte_automation" }
nte_gui_core = { path = "../nte_gui_core" }
serde_json = "1"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
